--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,5 @@
-<div [ngClass]="'flex'">
-  <div style="border: solid">
+<div [ngClass]="'flex'" [formGroup]="searchFields">
+  <div style="border: solid" >
     <div [ngClass]="'searchDiv'">
       <h2>{{title}}</h2>
     </div>
@@ -12,7 +12,7 @@
     <div [ngClass]="'countryListStyle'">
       <div style="margin-left: 20px">
         <p>Country</p>
-        <select [ngClass]="'inputStyle'" [(ngModel)]="searchFields.countryOption">
+        <select [ngClass]="'inputStyle'" formControlName="countryOption">
           <option [value]="'Select One'">--Select One--</option>
           <!--          TODO: use id instead of name in value-->
           <!--          DONE-->
@@ -25,18 +25,18 @@
     <div [ngClass]="'keywordStyle'">
       <div style="margin-left: 20px">
         <p>Keyword</p>
-        <input [ngClass]="'inputStyle'" [(ngModel)]="searchFields.keywordOption">
+        <input [ngClass]="'inputStyle'" formControlName="keywordOption">
         <br><br>
-        <input type="checkbox" [(ngModel)]="searchFields.checkboxOption['CodeOfTheIntervention']">Code of the
+        <input type="checkbox" formControlName="CodeOfTheIntervention">Code of the
         intervention
         <br>
-        <input type="checkbox" [(ngModel)]="searchFields.checkboxOption['TitleOfTheIntervention']">Title of the
+        <input type="checkbox" formControlName="TitleOfTheIntervention">Title of the
         intervention
         <br>
-        <input type="checkbox" [(ngModel)]="searchFields.checkboxOption['InterventionShortName']">Intervention short
+        <input type="checkbox" formControlName="InterventionShortName">Intervention short
         name
         <br>
-        <input type="checkbox" [(ngModel)]="searchFields.checkboxOption['InterventionDescription']">Intervention
+        <input type="checkbox" formControlName="InterventionDescription">Intervention
         description
       </div>
     </div>
@@ -45,9 +45,9 @@
       <div style="margin-left: 20px">
         <h3>Actual Start Date</h3>
         <p>From</p>
-        <input [ngClass]="'inputStyle'" type="date" [(ngModel)]="searchFields.dateFrom">
+        <input [ngClass]="'inputStyle'" type="date" formControlName="dateFrom">
         <p>To</p>
-        <input [ngClass]="'inputStyle'" type="date" [(ngModel)]="searchFields.dateTo">
+        <input [ngClass]="'inputStyle'" type="date" formControlName="dateTo">
       </div>
     </div>
   </div>
