--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -32,6 +32,22 @@ table {
   margin-bottom: 10px;
 }
 
+.submitButtonStyle {
+  width: 100px;
+  height: 30px;
+  background-color: limegreen;
+  margin-left: 30px;
+  margin-top: 10px;
+}
+
+.cancelButtonStyle {
+  width: 100px;
+  height: 30px;
+  background-color: red;
+  margin-left: 30px;
+  margin-top: 10px;
+}
+
 .flex {
   margin-top: 20px;
   display: flex;
