Aded pagination ngx

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     </search>
   </div>
 
-  <div [ngClass]="'flex'">
+  <div [ngClass]="'flex'" style="margin-left: 50px;">
     <portfolio
       [searchOptions]="searchFields"
 
