--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,8 +1,3 @@
-<div *ngIf="shawInterventionDetails"
-(click)="shawInterventionDetails = !shawInterventionDetails">
-  <pre>{{interventionDetails}}</pre>
-</div>
-
 <div *ngIf="isCreateButtonPressed">
   <div [ngClass]="'flex'">
     <form [formGroup]="interventionService.newInterventionForm">
@@ -39,7 +34,8 @@
       interventionService.newInterventionForm.get('Country').touched"
            style="color: red">
         Country is required field
-      </div><br><br>
+      </div>
+      <br><br>
       Status<br>
       <select formControlName="Status">
         <option *ngFor="let currentWorkflow of workflowService.workflowStates"
@@ -49,7 +45,8 @@
       interventionService.newInterventionForm.get('Status').touched"
            style="color: red">
         Status is required field
-      </div><br><br>
+      </div>
+      <br><br>
       Last Updated By<br>
       <select formControlName="User">
         <option *ngFor="let currentUser of userService.users"
@@ -59,7 +56,8 @@
       interventionService.newInterventionForm.get('User').touched"
            style="color: red">
         Last Updated user is required field
-      </div><br><br>
+      </div>
+      <br><br>
       Last Updated On<br>
       <input type="date" formControlName="LastUpdatedOn">
       <div *ngIf="interventionService.newInterventionForm.get('LastUpdatedOn').hasError('required') &&
@@ -69,7 +67,9 @@
       </div>
     </form>
   </div>
-  <button [ngClass]="'submitButtonStyle'" (click)="interventionService.logNewIntervention(); isCreateButtonPressed = false">Submit</button>
+  <button [ngClass]="'submitButtonStyle'"
+          (click)="interventionService.logNewIntervention(); isCreateButtonPressed = false">Submit
+  </button>
   <button [ngClass]="'cancelButtonStyle'" (click)="isCreateButtonPressed = false">Cancel</button>
 </div>
 
@@ -96,42 +96,46 @@
     <thead>
     <tr>
       <th>Code of the Intervention<br><br>
-        <button (click)="interventionService.sortInterventionList('InterventionCode', true)">↑</button>
-        <button (click)="interventionService.sortInterventionList('InterventionCode', false)">↓</button>
+        <button (click)="interventionService.sortInterventions('InterventionCode', true)">↑</button>
+        <button (click)="interventionService.sortInterventions('InterventionCode', false)">↓</button>
       </th>
       <th>Short Name<br><br>
-        <button (click)="interventionService.sortInterventionList('ShortName', true)">↑</button>
-        <button (click)="interventionService.sortInterventionList('ShortName', false)">↓</button>
+        <button (click)="interventionService.sortInterventions('ShortName', true)">↑</button>
+        <button (click)="interventionService.sortInterventions('ShortName', false)">↓</button>
       </th>
       <th>Official Intervention Name<br><br>
-        <button (click)="interventionService.sortInterventionList('CommericalName', true)">↑</button>
-        <button (click)="interventionService.sortInterventionList('CommericalName', false)">↓
+        <button (click)="interventionService.sortInterventions('CommericalName', true)">↑</button>
+        <button (click)="interventionService.sortInterventions('CommericalName', false)">↓
         </button>
       </th>
       <th>Country<br><br>
-        <button (click)="interventionService.sortInterventionList('Country', true)">↑</button>
-        <button (click)="interventionService.sortInterventionList('Country', false)">↓</button>
+        <button (click)="interventionService.sortInterventions('Country', true)">↑</button>
+        <button (click)="interventionService.sortInterventions('Country', false)">↓</button>
       </th>
       <th>Status<br><br>
-        <button (click)="interventionService.sortInterventionList('Status', true)">↑</button>
-        <button (click)="interventionService.sortInterventionList('Status', false)">↓</button>
+        <button (click)="interventionService.sortInterventions('Status', true)">↑</button>
+        <button (click)="interventionService.sortInterventions('Status', false)">↓</button>
       </th>
       <th>Last Updated By<br><br>
-        <button (click)="interventionService.sortInterventionList('User', true)">↑</button>
-        <button (click)="interventionService.sortInterventionList('User', false)">↓</button>
+        <button (click)="interventionService.sortInterventions('User', true)">↑</button>
+        <button (click)="interventionService.sortInterventions('User', false)">↓</button>
       </th>
       <th>Last Updated On<br><br>
-        <button (click)="interventionService.sortInterventionList('UpdateOn', true)">↑</button>
-        <button (click)="interventionService.sortInterventionList('UpdateOn', false)">↓</button>
+        <button (click)="interventionService.sortInterventions('UpdateOn', true)">↑</button>
+        <button (click)="interventionService.sortInterventions('UpdateOn', false)">↓</button>
       </th>
     </tr>
+    </thead>
 
+    <tbody>
     <tr hover *ngFor="let currentIntervention of interventionService.filteredInterventions | paginate: { itemsPerPage: 10,
-    currentPage: page,
-    totalItems: totalLength
-    }"
-        (click)="interventionService.onSelect(currentIntervention)">
-      <td><a routerLink="/intervention" routerActive="active">{{currentIntervention.InterventionCode}}</a></td>
+      currentPage: page,
+      totalItems: totalLength
+      }">
+
+      <!--      <td><a (click)="interventionService.onSelect(currentIntervention)" routerLink="/intervention/{{currentIntervention.InterventionInstanceId}}" routerActive="active">{{currentIntervention.InterventionCode}}</a></td>-->
+      <td><a [routerLink]='["/intervention/", currentIntervention.InterventionInstanceId]'
+             routerActive="active">{{currentIntervention.InterventionCode}}</a></td>
       <td>{{currentIntervention.ShortName}}</td>
       <td>{{currentIntervention.CommericalName}}</td>
       <td>{{currentIntervention.InterventionCountryID | getName: "Country"}}</td>
@@ -139,7 +143,7 @@
       <td>{{currentIntervention.UpdatedUserID | getName : "User"}}</td>
       <td>{{currentIntervention.DateUpdated | date : "dd/MM/yyy"}}</td>
     </tr>
-    </thead>
+    </tbody>
   </table>
   <pagination-controls (pageChange)="page = $event"></pagination-controls>
 
@@ -147,16 +151,14 @@
 
 <p>Pagination</p>
 <div [ngClass]="'flex'">
-  <select [(ngModel)]="countOfVisibleData" (change)="sliceFilteredData(); getCurrentPage(0)">
-    <option [value]="interventionService.filteredInterventions?.length">Shaw all</option>
+  <!-- TODO: Use reactive forms -->
+  <select [(ngModel)]="countOfVisibleData" (change)="getCurrentPage(0)">
+    <option [value]="interventionService.allInterventions?.length">Shaw all</option>
     <option [value]="5">5</option>
     <option [value]="3">3</option>
     <option [value]="2">2</option>
+    <option [value]="1">1</option>
   </select>
 </div>
 
 <button *ngFor="let page of countOfPages; let i = index" (click)="getCurrentPage(i)">{{i + 1}}</button>
-
-<router-outlet></router-outlet>
-
-
