--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,4 @@
+<!--TODO: use class instead of ngClass-->
 <div [ngClass]="'flex'" [formGroup]="searchFields">
   <div style="border: solid" >
     <div [ngClass]="'searchDiv'">
