--- a/src/app/create-new-intervention/create-new-intervention.component.css
+++ b/src/app/create-new-intervention/create-new-intervention.component.css
@@ -1,25 +1,3 @@
-th {
-  border: solid;
-  background: #bbb8b8;
-  height: 50px;
-}
-
-tr {
-  height: 50px;
-  table-layout: auto;
-}
-
-th, tr, td {
-  border-bottom: solid;
-}
-
-table {
-  border-collapse: collapse;
-  border: solid;
-  table-layout: auto;
-  width: 1100px;
-}
-
 .statusStyle {
   margin-left: 50px;
 }
@@ -64,5 +42,10 @@ table {
   margin-left: 10px;
 }
 
-
-
+.backToPortfolioButton {
+  width: 150px;
+  height: 30px;
+  background-color: limegreen;
+  margin-left: 30px;
+  margin-top: 10px;
+}
