--- a/src/app/intervention-details/intervention-details.component.html
+++ b/src/app/intervention-details/intervention-details.component.html
@@ -21,5 +21,5 @@
     UpdatedUserID: {{intervention.UpdatedUserID}}
     MasterID: {{intervention.MasterID}}
   </pre>
-  <button (click)="goToPortfolio()" [ngClass]="'searchButtonStyle'">Go back to portfolio</button>
+  <button (click)="goToPortfolio()" class="searchButtonStyle">Go back to portfolio</button>
 </div>
