--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -76,18 +76,18 @@
 
 </div>
 
-<div class="flex">
-  <div class="flex">
-    <select [formControl]="countOfVisibleData" (change)="getCurrentPage(0)">
-      <option [value]="interventionService.allInterventions?.length">Shaw all</option>
-      <option [value]="5">5</option>
-      <option [value]="3">3</option>
-      <option [value]="2">2</option>
-      <option [value]="1">1</option>
-    </select>
-  </div>
+<!--<div class="flex">-->
+<!--  <div class="flex">-->
+<!--    <select [formControl]="countOfVisibleData" (change)="getCurrentPage(0)">-->
+<!--      <option [value]="interventionService.allInterventions?.length">Shaw all</option>-->
+<!--      <option [value]="5">5</option>-->
+<!--      <option [value]="3">3</option>-->
+<!--      <option [value]="2">2</option>-->
+<!--      <option [value]="1">1</option>-->
+<!--    </select>-->
+<!--  </div>-->
 
-  <div class="flex">
-    <button class="pagingButtonStyle" *ngFor="let page of countOfPages; let i = index" (click)="getCurrentPage(i)">{{i + 1}}</button>
-  </div>
-</div>
+<!--  <div class="flex">-->
+<!--    <button class="pagingButtonStyle" *ngFor="let page of countOfPages; let i = index" (click)="getCurrentPage(i)">{{i + 1}}</button>-->
+<!--  </div>-->
+<!--</div>-->
