--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,3 @@
-<!--<button (click)="logInterventions()">Log get interventions</button>-->
-<!--<div *ngFor="let object of (logInterventions() | async)">-->
-<!--  {{object.ShortName}}-->
-<!--</div>-->
 <div>
   <div class="flex">
     <div class="statusStyle">
@@ -54,7 +50,7 @@
     </thead>
 
     <tbody>
-    <tr hover *ngFor="let currentIntervention of interventionService.getInterventions() | async">
+    <tr hover *ngFor="let currentIntervention of interventionService.filteredInterventions$ | async">
       <!--    | paginate: { itemsPerPage: 10,-->
       <!--      currentPage: page,-->
       <!--      totalItems: totalLength-->
@@ -76,18 +72,18 @@
 
 </div>
 
-<!--<div class="flex">-->
-<!--  <div class="flex">-->
-<!--    <select [formControl]="countOfVisibleData" (change)="getCurrentPage(0)">-->
-<!--      <option [value]="interventionService.allInterventions?.length">Shaw all</option>-->
-<!--      <option [value]="5">5</option>-->
-<!--      <option [value]="3">3</option>-->
-<!--      <option [value]="2">2</option>-->
-<!--      <option [value]="1">1</option>-->
-<!--    </select>-->
-<!--  </div>-->
+<div class="flex">
+  <div class="flex">
+    <select [formControl]="countOfVisibleData" (change)="getCurrentPage(0)">
+      <option [value]="(interventionService.allInterventions$ | async)?.length">Shaw all</option>
+      <option [value]="5">5</option>
+      <option [value]="3">3</option>
+      <option [value]="2">2</option>
+      <option [value]="1">1</option>
+    </select>
+  </div>
 
-<!--  <div class="flex">-->
-<!--    <button class="pagingButtonStyle" *ngFor="let page of countOfPages; let i = index" (click)="getCurrentPage(i)">{{i + 1}}</button>-->
-<!--  </div>-->
-<!--</div>-->
+  <div class="flex">
+    <button class="pagingButtonStyle" *ngFor="let page of countOfPages; let i = index" (click)="getCurrentPage(i)">{{i + 1}}</button>
+  </div>
+</div>
